# facenet

./: .gitignore  README.md  main.py  pyproject.toml
configs/: benchmark.yaml  inference.yaml  train.yaml
facenet/: __init__.py  config.py
facenet/data/: __init__.py  dataset.py  identity_dataset.py  module.py  sampler.py  transforms.py
facenet/db/: __init__.py  postgres_store.py
facenet/evaluation/: __init__.py  metrics.py
facenet/inference/: __init__.py  service.py
facenet/losses/: __init__.py  triplet.py
facenet/models/: __init__.py  backbone.py  lightning_module.py
facenet/utils/: logging.py  seed.py
scripts/: __init__.py  benchmark.py  evaluate.py  export.py  gradio_verify.py  live_detect.py  populate_db.py  serve.py  train.py
